--- a/.github/workflows/01 - full.yml
+++ b/.github/workflows/01 - full.yml
@@ -9,9 +9,9 @@ env:
   IMAGE_NAME: selenium-test
   
 jobs:
-  run-base:
+  build-base:
     runs-on: ubuntu-24.04 
-    if: "contains(github.event.head_commit.message, '[run-base]')"
+    if: "!contains(github.event.head_commit.message, '[skip build]')"
     steps:
     - uses: actions/checkout@v4
 
@@ -29,3 +29,28 @@ jobs:
         echo IMAGE_ID=$IMAGE_ID
         docker tag $IMAGE_NAME $IMAGE_ID:base
         docker push $IMAGE_ID:base
+
+
+  run-test:
+    runs-on: ubuntu-24.04 
+    needs: build-base
+    if: always()
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Log in to registry
+        run: echo "${{ secrets.PERSONAL_ACCESS_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+      - name: Build image for test
+        run: docker build  --tag $IMAGE_NAME -f build/dockerfile-test .
+
+      - name: Run tests with Maven
+        run: ./run-tests.sh
+
+
+      - name: Upload Cucumber Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: cucumber-report
+          path: reports/cucumber-report.html
