--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,6 @@ services:
     container_name: selenium-tests
     working_dir: /app
     volumes:
-#      - .:/app
+      - .:/app
       - ./reports:/app/report/
-    environment:
-      - JAVA_HOME=/opt/java/openjdk
-      - PATH=/opt/java/openjdk/bin:$PATH
-      - DISPLAY=:99  # Requerido para correr Chrome en modo headless
     command: mvn clean install -U
