--- a/.github/workflows/01 - full.yml
+++ b/.github/workflows/01 - full.yml
@@ -43,7 +43,7 @@ jobs:
         run: echo "${{ secrets.PERSONAL_ACCESS_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build image for test
-        run: docker build  --tag $IMAGE_NAME -f build/dockerfile-test .
+        run: docker build  --tag $IMAGE_NAME:run -f build/dockerfile-test .
 
       - name: Run tests with Maven
         run: ./run-tests.sh
